--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "devDependencies": {
     "autoprefixer": "7.1.*",
-    "csso-cli": "1.0.*",
     "imagemin-cli": "3.0.*",
-    "node-sass": "4.5.*",
     "postcss-cli": "4.1.*",
+    "postcss-csso": "2.0.*",
+    "postcss-import": "11.0.*",
     "svgo": "0.7.*"
   },
   "dependencies": {
