--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "devDependencies": {
-    "autoprefixer": "7.1.*",
     "imagemin-cli": "3.0.*",
     "postcss-cli": "4.1.*",
+    "postcss-cssnext": "3.1.*",
     "postcss-csso": "2.0.*",
     "postcss-import": "11.0.*",
     "svgo": "0.7.*"
